--- a/404 page.css
+++ b/404 page.css
@@ -47,12 +47,19 @@ footer{
     padding-top: 11%;
     margin-left: 50%;
     transform: translateX(-50%);
+
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
+    
     line-height: 17px;
+    
+    text-decoration: none;
     text-align: center;
+    
     color: #a5a5a5;
+    
+
 }
 
 @media (max-width:700px){
