--- a/404 page.css
+++ b/404 page.css
@@ -54,12 +54,15 @@ footer{
     
     line-height: 17px;
     
-    text-decoration: none;
     text-align: center;
     
     color: #a5a5a5;
     
 
+}
+
+a{
+        text-decoration: none;
 }
 
 @media (max-width:700px){
