--- a/404 page.css
+++ b/404 page.css
@@ -7,6 +7,7 @@ body{
     display: inline-block;
 }
 h1{
+    display: inline;
     font-family: 'Inconsolata';
     font-size: 200%;
     font-weight: 700;
@@ -27,8 +28,12 @@ h1{
 
 .noticiaContent{
     display: block;
-    margin-left: 50%;
-    width: 40%;
+    
+    margin-top: -10vh;
+    margin-left: 40vw;
+    
+    width: 40vw;
+    
 }
 
 .badNews{
