--- a/404 page.css
+++ b/404 page.css
@@ -31,7 +31,7 @@ h1{
     
     margin-top: -10vh;
     margin-left: 40vw;
-    
+
     width: 40vw;
     
 }
@@ -175,6 +175,7 @@ footer{
     }
 
     footer{
-        font-size: 0.5em;
+        font-size: 0.7em;
+        width: 60vw;
     }
 }
