--- a/404 page.css
+++ b/404 page.css
@@ -98,7 +98,8 @@ footer{
         font-size: 3em;
         letter-spacing: -3px;
 
-        padding-top: 13vh;
+        padding-top: 0;
+        margin-top: 5vh;
     }
 
     .conteudo{
@@ -128,10 +129,7 @@ footer{
       
         margin-left: 5%;
     }
-    
-    .scarecrow{
-        display: none;
-    }
+
 
     .noticiaContent{
         text-align: left;
